@@ -1,3 +1,8 @@
+2013-09-17  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	KeyboardEventの処理を修正
+
 2013-09-10  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
